fix(projectManager): fix style on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -295,7 +295,7 @@
   box-shadow: 0px 0px 10px 6px rgba(22, 22, 22, 0.61);
   padding: 1rem;
   border-radius: 10px;
-  width: 100%;
+  width: 300px;
   top: 100px;
 }
 
